--- a/.github/workflows/QAWorkflow.yml
+++ b/.github/workflows/QAWorkflow.yml
@@ -3,7 +3,7 @@ name: QA Workflow
 on:
   workflow_dispatch:
   pull_request:
-    # Pull request events
+    # Pull request events only
     types: [synchronize, opened, reopened, ready_for_review]
 
 jobs:
