my_memory library included

--- a/.github/workflows/QAWorkflow.yml
+++ b/.github/workflows/QAWorkflow.yml
@@ -1,6 +1,10 @@
 name: QA Workflow
 
 on:
+  push:
+    # Push events
+    branches:
+      - master
   workflow_dispatch:
   pull_request:
     # Pull request events
